# security-ops-dashboard

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
scripts/: generate_data.py
secops_dashboard/: __init__.py  data.py  explain.py  server.py
static/: app.js  style.css
templates/: index.html
tests/: test_data.py  test_explain.py
